Set up SCSS support and move assets/public folders

--- a/views/_shared/_root-layout.jade
+++ b/views/_shared/_root-layout.jade
@@ -2,11 +2,12 @@ doctype html
 html
     head
         title= title
-        link(rel='stylesheet', href='/_shared/css/bootstrap.min.css')
-        link(rel='stylesheet', href='/_shared/css/bootstrap-theme.min.css')
+        link(rel='stylesheet', href='/_shared/css/reset.css')
+        link(rel='stylesheet', href='/_vendor/css/bootstrap.min.css')
+        link(rel='stylesheet', href='/_vendor/css/bootstrap-theme.min.css')
         block head
 
     body
         block body
-        script(src='/_shared/js/jquery-1.11.3.min.js')
-        script(src='/_shared/js/bootstrap.min.js')
+        script(src='/_vendor/js/jquery-1.11.3.min.js')
+        script(src='/_vendor/js/bootstrap.min.js')
