--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -1,7 +1,7 @@
 extends ../_shared/_root-layout
 
 block head
-
+	link(rel='stylesheet', href='/dashboard/css/dashboard.css')
 
 block body
 	h1=title
