Make SCSS work and make a basic header on dashboard

--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -4,4 +4,6 @@ block head
 	link(rel='stylesheet', href='/dashboard/css/dashboard.css')
 
 block body
-	h1=title
+	div#header
+		h1 Titanic
+		h2 T.I.T.A.N.I.C
