--- a/assets/dashboard/css/dashboard.scss
+++ b/assets/dashboard/css/dashboard.scss
@@ -1,3 +1,25 @@
+@import '../../_shared/css/defaults';
+
 #header {
 	width: 100%;
+	background-color: #eeeeee;
+	padding: 60px 0 100px;
+
+	h1, h2 {
+		margin: 0;
+		padding: 0;
+		text-align: center;
+		font-family: $fontFamily sans-serif;
+		color: $textColour;
+	}
+
+	h1 {
+		font-size: 7em;
+		font-weight: bold;
+	}
+
+	h2 {
+		font-size: 3em;
+		font-weight: lighter;
+	}
 }
