--- a/views/_shared/_root-layout.jade
+++ b/views/_shared/_root-layout.jade
@@ -5,6 +5,7 @@ html
 		link(rel='stylesheet', href='/_shared/css/reset.css')
 		link(rel='stylesheet', href='/_vendor/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/_vendor/css/bootstrap-theme.min.css')
+		link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Lato:700,900,300')
 		block head
 
 	body
