Set up title in Jade root layout

--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -6,4 +6,4 @@ block head
 block body
 	div#header
 		h1 Titanic
-		h2 T.I.T.A.N.I.C
+		h2 Transparent Integration of Terminal Aliases,<br />Networked In-between Computers
