--- a/views/_shared/_root-layout.jade
+++ b/views/_shared/_root-layout.jade
@@ -1,7 +1,10 @@
 doctype html
 html
 	head
-		title= title
+		if title == null
+			title Titanic
+		else
+			title Titanic :: #{title}
 		link(rel='stylesheet', href='/_shared/css/reset.css')
 		link(rel='stylesheet', href='/_vendor/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/_vendor/css/bootstrap-theme.min.css')
