--- a/assets/_shared/css/reset.scss
+++ b/assets/_shared/css/reset.scss
@@ -1,4 +1,6 @@
-html, body, div {
+@import '../../_shared/css/defaults';
+
+html, body, div, ul, ol {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -6,6 +8,6 @@ html, body, div {
 	vertical-align: baseline;
 }
 
-h1 {
-	color: red
+h1, h2, h3, h4, p, li {
+	font-family: $fontFamily sans-serif !important;
 }
