--- a/assets/dashboard/css/dashboard.scss
+++ b/assets/dashboard/css/dashboard.scss
@@ -4,12 +4,12 @@
 	width: 100%;
 	background-color: #eeeeee;
 	padding: 60px 0 70px;
+	margin-bottom: 20px;
 
 	h1, h2 {
 		margin: 0;
 		padding: 0;
 		text-align: center;
-		font-family: $fontFamily sans-serif;
 		color: $textColour;
 	}
 
@@ -21,5 +21,38 @@
 	h2 {
 		font-size: 2.5em;
 		font-weight: lighter;
+	}
+}
+
+ul.navigation {
+	li {
+		font-size: 2em;
+		font-weight: lighter;
+		list-style-type: none;
+		margin-bottom: 10px;
+
+		a {
+			text-decoration: none;
+			display: block;
+
+			i {
+				margin-right: 15px;
+				color: $textMuted;
+			}
+
+			span {
+				color: $textColour;
+			}
+		}
+
+		a:hover {
+			i {
+				color: $textHighlight;
+			}
+
+			span {
+				text-decoration: underline;
+			}
+		}
 	}
 }
