Placeholder for activity stream

--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -33,3 +33,6 @@ block body
 			div.col-md-8: div.portlet
 				div.portlet-title
 					caption: span.caption-subject.text-uppercase Activity Stream
+
+				div.portlet-body.activity-stream
+					p.none No activity yet!
