--- a/assets/dashboard/css/dashboard.scss
+++ b/assets/dashboard/css/dashboard.scss
@@ -56,3 +56,13 @@ ul.navigation {
 		}
 	}
 }
+
+div.activity-stream {
+	p.none {
+		font-size: 1.5em;
+		font-weight: lighter;
+		font-style: italic;
+		color: $textMuted;
+		text-align: center;
+	}
+}
