--- a/views/_shared/root-layout.jade
+++ b/views/_shared/root-layout.jade
@@ -5,12 +5,13 @@ html
 			title Titanic
 		else
 			title Titanic :: #{title}
+		link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Lato:700,900,300')
 		link(rel='stylesheet', href='/_shared/css/reset.css')
 		link(rel='stylesheet', href='/_vendor/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/_vendor/css/bootstrap-theme.min.css')
 		link(rel='stylesheet', href='/_vendor/css/bootstrap-portlets.min.css')
 		link(rel='stylesheet', href='/_vendor/css/font-awesome.min.css')
-		link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Lato:700,900,300')
+		link(rel='stylesheet', href='/_shared/css/navigation.css')
 		block head
 
 	body
