--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -1,4 +1,4 @@
-extends ../_shared/_root-layout
+extends ../_shared/root-layout
 
 block head
 	link(rel='stylesheet', href='/dashboard/css/dashboard.css')
@@ -10,25 +10,10 @@ block body
 		h2 Transparent Integration of Terminal Aliases,<br />Networked In-between Computers
 
 	div.container
+
 		div.row
 
-			div.col-md-4: div.portlet
-				div.portlet-title
-					caption: span.caption-subject.text-uppercase Navigation
-
-				div.portlet-body
-					ul.navigation
-						li: a(href='/devices')
-							i.fa.fa-fw.fa-desktop
-							span Devices
-
-						li: a(href='/devices')
-							i.fa.fa-fw.fa-exchange
-							span Hostname Aliases
-
-						li: a(href='/devices')
-							i.fa.fa-fw.fa-terminal
-							span Bash Shortcuts
+			div.col-md-4: include ../_shared/navigation
 
 			div.col-md-8: div.portlet
 				div.portlet-title
