Create basic UI template for inner pages

--- a/assets/_shared/css/reset.scss
+++ b/assets/_shared/css/reset.scss
@@ -8,6 +8,6 @@ html, body, div, ul, ol {
 	vertical-align: baseline;
 }
 
-h1, h2, h3, h4, p, li {
+h1, h2, h3, h4, h5, h6, p, li, span {
 	font-family: $fontFamily sans-serif !important;
 }
