Basic use of log helper

--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -20,4 +20,12 @@ block body
 					caption: span.caption-subject.text-uppercase Activity Stream
 
 				div.portlet-body.activity-stream
-					p.none No activity yet!
+					if eventsError != null
+						p.error Activity log failed to load.
+						pre= eventsError
+					else
+						if events.length == 0
+							p.none No activity yet!
+						else
+							for e in events
+								pre= e
