--- a/assets/_shared/css/reset.scss
+++ b/assets/_shared/css/reset.scss
@@ -10,4 +10,5 @@ html, body, div, ul, ol {
 
 h1, h2, h3, h4, h5, h6, p, li, span {
 	font-family: $fontFamily sans-serif !important;
+	color: $textColour;
 }
