Create "+ Device" button

--- a/views/_shared/navigation.jade
+++ b/views/_shared/navigation.jade
@@ -1,6 +1,7 @@
 div.portlet
 	div.portlet-title
-		caption: span.caption-subject.text-uppercase Navigation
+		div.caption
+			span.caption-subject.text-uppercase Navigation
 
 	div.portlet-body
 		ul.navigation
