--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -17,7 +17,8 @@ block body
 
 			div.col-md-8: div.portlet
 				div.portlet-title
-					caption: span.caption-subject.text-uppercase Activity Stream
+					div.caption
+						span.caption-subject.text-uppercase Activity Stream
 
 				div.portlet-body.activity-stream
 					if eventsError != null
