--- a/assets/_shared/css/defaults.scss
+++ b/assets/_shared/css/defaults.scss
@@ -7,3 +7,10 @@ $textHighlight: #990000;
 // fonts
 
 $fontFamily: 'Lato';
+
+// CSS defaults
+
+h1, h2, h3, h4, h5, h6, p, li, span {
+	font-family: $fontFamily, sans-serif !important;
+	color: $textColour;
+}
