Create _ variable space

--- a/views/devices/edit.jade
+++ b/views/devices/edit.jade
@@ -8,7 +8,7 @@ block page-body
 	div.portlet
 		div.portlet-title
 			div.caption
-				span.caption-subject.text-uppercase= title
+				span.caption-subject.text-uppercase= _.title
 
 		div.portlet-body
 
