--- a/views/_shared/navigation.jade
+++ b/views/_shared/navigation.jade
@@ -5,18 +5,18 @@ div.portlet
 
 	div.portlet-body
 		ul.navigation
-			li: a(href='/', class=(activePage == 'dashboard' ? 'active' : ''))
+			li: a(href='/', class=(_.activePage == 'dashboard' ? 'active' : ''))
 				i.fa.fa-fw.fa-tv
 				span Dashboard
 
-			li: a(href='/devices', class=(activePage == 'devices' ? 'active' : ''))
+			li: a(href='/devices', class=(_.activePage == 'devices' ? 'active' : ''))
 				i.fa.fa-fw.fa-server
 				span Devices
 
-			li: a(href='/devices', class=(activePage == 'hostname-aliases' ? 'active' : ''))
+			li: a(href='/devices', class=(_.activePage == 'hostname-aliases' ? 'active' : ''))
 				i.fa.fa-fw.fa-exchange
 				span Hostname Aliases
 
-			li: a(href='/devices', class=(activePage == 'bash-shortcuts' ? 'active' : ''))
+			li: a(href='/devices', class=(_.activePage == 'bash-shortcuts' ? 'active' : ''))
 				i.fa.fa-fw.fa-terminal
 				span Bash Shortcuts
