--- a/views/_shared/root-layout.jade
+++ b/views/_shared/root-layout.jade
@@ -4,7 +4,7 @@ html
 		if title == null
 			title Titanic
 		else
-			title Titanic :: #{title}
+			title Titanic :: #{_.title}
 		link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Lato:700,900,300')
 		link(rel='stylesheet', href='/_shared/css/reset.css')
 		link(rel='stylesheet', href='/_vendor/css/bootstrap.min.css')
