--- a/assets/_shared/css/defaults.scss
+++ b/assets/_shared/css/defaults.scss
@@ -10,7 +10,8 @@ $fontFamily: 'Lato';
 
 // CSS defaults
 
-h1, h2, h3, h4, h5, h6, p, li, span {
+h1, h2, h3, h4, h5, h6, p, li, input, label, span {
 	font-family: $fontFamily, sans-serif !important;
+	font-weight: normal;
 	color: $textColour;
 }
