--- a/views/devices/index.jade
+++ b/views/devices/index.jade
@@ -3,11 +3,12 @@ extends ../_shared/page-layout
 mixin device(d)
 	div.device-row
 		p: a(href = '/devices/edit/' + d._id)
-			i(class = 'fa fa-lg fa-' + d.type)
+			i(class = 'fa fa-lg fa-fw fa-' + d.type)
 			| &nbsp;&nbsp;&nbsp;
 			span= d.hostname
 
 block page-head
+
 	link(rel='stylesheet', href='/devices/css/devices.css')
 
 block page-body
