Implement CoffeeScript middleware

--- a/views/_shared/root-layout.jade
+++ b/views/_shared/root-layout.jade
@@ -5,17 +5,18 @@ html
 			title Titanic
 		else
 			title Titanic :: #{_.title}
-		link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Lato:300,400,700,900')
-		link(rel='stylesheet', href='/_shared/css/reset.css')
-		link(rel='stylesheet', href='/_vendor/css/bootstrap.min.css')
-		link(rel='stylesheet', href='/_vendor/css/bootstrap-theme.min.css')
-		link(rel='stylesheet', href='/_vendor/css/bootstrap-portlets.min.css')
-		link(rel='stylesheet', href='/_vendor/css/font-awesome.min.css')
-		link(rel='stylesheet', href='/_shared/css/defaults.css')
-		link(rel='stylesheet', href='/_shared/css/navigation.css')
+		link(rel = 'stylesheet', href = '//fonts.googleapis.com/css?family = Lato:300,400,700,900')
+		link(rel = 'stylesheet', href = '/_shared/css/reset.css')
+		link(rel = 'stylesheet', href = '/_vendor/css/bootstrap.min.css')
+		link(rel = 'stylesheet', href = '/_vendor/css/bootstrap-theme.min.css')
+		link(rel = 'stylesheet', href = '/_vendor/css/bootstrap-portlets.min.css')
+		link(rel = 'stylesheet', href = '/_vendor/css/font-awesome.min.css')
+		link(rel = 'stylesheet', href = '/_shared/css/defaults.css')
+		link(rel = 'stylesheet', href = '/_shared/css/navigation.css')
 		block head
 
 	body
 		block body
-		script(src='/_vendor/js/jquery-1.11.3.min.js')
-		script(src='/_vendor/js/bootstrap.min.js')
+		script(src = '/_vendor/js/jquery-1.11.3.min.js')
+		script(src = '/_vendor/js/bootstrap.min.js')
+		block scripts
