--- a/views/devices/edit.jade
+++ b/views/devices/edit.jade
@@ -1,5 +1,6 @@
 extends ../_shared/page-layout
 include ../_mixins/forms
+include ../_mixins/plugins
 
 block page-head
 
@@ -51,16 +52,18 @@ block page-body
 				)
 
 				fieldset.form-group
-					button.btn.btn-primary
-						i.fa.fa-save
-						| &nbsp;
-						| Save
-					| &nbsp;&nbsp;&nbsp;&nbsp;
-					a.btn.btn-default#delete-button(href = 'javascript:void;')
-						i.fa.fa-trash-o
-						| &nbsp;
-						| Delete
+					div.btn-group
+						button.btn.btn-primary
+							i.fa.fa-save
+							| &nbsp; Save
+						if device
+							a.btn.btn-default#delete-button(href = 'javascript:void;')
+								i.fa.fa-trash-o
+								| &nbsp; Delete
 
 block scripts
 
+	script.
+		var device = !{JSON.stringify(device)}
+	+pluginBootbox
 	script(src = '/devices/js/edit.js')
