Add 'other' device type

--- a/views/_shared/navigation.jade
+++ b/views/_shared/navigation.jade
@@ -14,7 +14,7 @@ div.portlet
 				span Devices
 
 			li: a(href='/devices', class=(_.activePage == 'hostname-aliases' ? 'active' : ''))
-				i.fa.fa-fw.fa-exchange
+				i.fa.fa-fw.fa-sitemap
 				span Hostname Aliases
 
 			li: a(href='/devices', class=(_.activePage == 'bash-shortcuts' ? 'active' : ''))
