--- a/assets/devices/css/devices.scss
+++ b/assets/devices/css/devices.scss
@@ -1,7 +1,7 @@
 @import '../../_shared/css/defaults';
 
 .device-row {
-	padding: 0 10px 20px;
+	padding: 14px 10px;
 	display: flex;
 	align-items: center;
 
