--- a/views/devices/index.jade
+++ b/views/devices/index.jade
@@ -38,8 +38,12 @@ block page-body
 							p.text-danger Something went wrong!
 						when 'deleted'
 							p.text-success The device was deleted!
+						when 'saved'
+							p.text-success Your changes have been saved!
+						when 'created'
+							p.text-success The device was created!
 
-			if devices.length == 0
+	if devices.length == 0
 				p.text-muted.text-center There are no registered devices!
 
 			each d in devices
