--- a/views/devices/edit.jade
+++ b/views/devices/edit.jade
@@ -75,4 +75,4 @@ block page-body
 					+formButton('Save', 'save', {'class': 'btn-primary'})
 
 block scripts
-	+pluginValidation
+	+plugin_validation
