Switch to 302 redirects

--- a/views/_mixins/plugins.jade
+++ b/views/_mixins/plugins.jade
@@ -11,4 +11,4 @@ mixin plugin_validation
 
 mixin plugin_autoCloseAlerts
 	script(type = 'text/javascript').
-		$('.alert-success').delay(3000).slideUp(400, function() {$(this).alert('close');});
+		$('.alert').delay(3000).slideUp(400, function() {$(this).alert('close');});
