Add toastrjs config

--- a/views/_shared/root-layout.jade
+++ b/views/_shared/root-layout.jade
@@ -11,12 +11,17 @@ html
 		link(rel = 'stylesheet', href = '/_vendor/css/bootstrap-theme.min.css')
 		link(rel = 'stylesheet', href = '/_vendor/css/bootstrap-portlets.min.css')
 		link(rel = 'stylesheet', href = '/_vendor/css/font-awesome.min.css')
+		link(rel = 'stylesheet', href = '/_vendor/css/toastr.min.css')
 		link(rel = 'stylesheet', href = '/_shared/css/defaults.css')
 		link(rel = 'stylesheet', href = '/_shared/css/navigation.css')
 		block head
 
 	body
 		block body
+
 		script(src = '/_vendor/js/jquery-1.11.3.min.js')
 		script(src = '/_vendor/js/bootstrap.min.js')
+		script(src = '/_vendor/js/toastr.min.js')
+		script(src = '/_vendor/js/toastr.config.js')
+
 		block scripts
