--- a/views/_mixins/plugins.jade
+++ b/views/_mixins/plugins.jade
@@ -12,3 +12,8 @@ mixin plugin_validation
 mixin plugin_autoCloseAlerts
 	script(type = 'text/javascript').
 		$('.alert').delay(3000).slideUp(400, function() {$(this).alert('close');});
+
+mixin plugin_toastrListener(_)
+	script(type = 'text/javascript').
+		var toastrMessages = !{JSON.stringify(_.toastr || [])};
+	script(src = '/_shared/js/toastr-listener.js')
