--- a/views/_shared/root-layout.jade
+++ b/views/_shared/root-layout.jade
@@ -1,3 +1,5 @@
+include ../_mixins/plugins
+
 doctype html
 html
 	head
@@ -18,10 +20,9 @@ html
 
 	body
 		block body
-
 		script(src = '/_vendor/js/jquery-1.11.3.min.js')
 		script(src = '/_vendor/js/bootstrap.min.js')
 		script(src = '/_vendor/js/toastr.min.js')
 		script(src = '/_vendor/js/toastr.config.js')
-
+		+plugin_toastrListener(_)
 		block scripts
