--- a/views/_mixins/plugins.jade
+++ b/views/_mixins/plugins.jade
@@ -15,5 +15,5 @@ mixin plugin_autoCloseAlerts
 
 mixin plugin_toastrListener(_)
 	script(type = 'text/javascript').
-		var toastrMessages = !{JSON.stringify(_.toastr || [])};
+		var toastrMessages = !{JSON.stringify(locals.messages || [])};
 	script(src = '/_shared/js/toastr-listener.js')
