--- a/views/devices/index.jade
+++ b/views/devices/index.jade
@@ -22,7 +22,7 @@ mixin device(d)
 
 block page-head
 
-	link(rel = 'stylesheet', href = '/devices/css/devices.css')
+	link(rel = 'stylesheet', href = '/_shared/css/device-list.css')
 
 block page-body
 
