Header background image

--- a/assets/dashboard/css/dashboard.scss
+++ b/assets/dashboard/css/dashboard.scss
@@ -2,7 +2,7 @@
 
 #header {
 	width: 100%;
-	background-color: #eeeeee;
+	background: #eeeeee url("/dashboard/images/header-bg.png") no-repeat bottom left;
 	padding: 60px 0 70px;
 	margin-bottom: 20px;
 
