--- a/assets/_shared/css/page-layout.scss
+++ b/assets/_shared/css/page-layout.scss
@@ -2,8 +2,9 @@
 
 #header {
 	width: 100%;
-	background-color: #eeeeee;
-	padding: 8px 0 10px 30px;
+	background: #eeeeee url("/_shared/images/header-bg.png") no-repeat bottom left;
+	background-size: 8%;
+	padding: 8px 0 10px 120px;
 	margin-bottom: 20px;
 
 	h1 {
