--- a/assets/_shared/css/page-layout.scss
+++ b/assets/_shared/css/page-layout.scss
@@ -2,9 +2,9 @@
 
 #header {
 	width: 100%;
-	background: #eeeeee url("/_shared/images/header-bg.png") no-repeat bottom left;
-	background-size: 8%;
-	padding: 8px 0 10px 120px;
+	background: #eeeeee url('/_shared/images/header-bg.png') no-repeat bottom left;
+	background-size: contain;
+	padding: 8px 0 10px 90px;
 	margin-bottom: 20px;
 
 	h1 {
