Options on IP alias editing page

--- a/assets/_shared/css/defaults.scss
+++ b/assets/_shared/css/defaults.scss
@@ -2,6 +2,7 @@
 
 $textColour: #333333;
 $textMuted: transparentize($textColour, 0.5);
+$textVeryMuted: transparentize($textColour, 0.8);
 $textHighlight: #990000;
 
 // fonts
@@ -13,4 +14,12 @@ $fontFamily: 'Lato';
 h1, h2, h3, h4, h5, h6, p, li, input, label, span {
 	font-family: $fontFamily, sans-serif !important;
 	color: $textColour;
+}
+
+.text-muted {
+	color: $textMuted;
+}
+
+.text-very-muted {
+	color: $textVeryMuted;
 }
