--- a/views/ip-aliases/edit.jade
+++ b/views/ip-aliases/edit.jade
@@ -4,9 +4,11 @@ include ../_mixins/plugins
 
 block page-head
 
-	link(rel = 'stylesheet', href = '/ip-aliases/css/edit.css')
+	link(rel = 'stylesheet', href = '/_shared/css/forms.css')
 
 block page-body
+
+	- arr = '&nbsp;&nbsp;<i class="fa fa-angle-right text-muted"></i>&nbsp;&nbsp;'
 
 	div.portlet
 		div.portlet-title
@@ -17,6 +19,28 @@ block page-body
 
 			form(action = '/ip-aliases/edit/' + device._id, method = 'post')
 
+				div.row
+
+					div.col-md-6
+
+						h2 #[em #{device.hostname}] !{arr} ...
+
+						for d in devices
+							if (d._id.toString() != device._id.toString())
+								+form_fieldset
+									+form_checkBox('x_to_' + d._id, device.hostname + arr + d.hostname, true)
+
+					div.col-md-6
+
+						h2 ... !{arr} #[em #{device.hostname}]
+
+						for d in devices
+							if (d._id.toString() != device._id.toString())
+								+form_fieldset
+									+form_checkBox('x_from_' + d._id, d.hostname + arr + device.hostname, true)
 
 				+form_fieldset
 					+form_button('Save', 'save', {'class': 'btn-primary'})
+
+block scripts
+	script(src = '/_shared/js/forms.js')
