--- a/assets/_shared/css/page-layout.scss
+++ b/assets/_shared/css/page-layout.scss
@@ -15,3 +15,13 @@
 		font-weight: normal;
 	}
 }
+
+.container {
+	h2, h3 {
+		margin: 0 0 14px;
+	}
+
+	p, li, label {
+		font-size: 1.25em;
+	}
+}
