--- a/views/_shared/root-layout.jade
+++ b/views/_shared/root-layout.jade
@@ -14,7 +14,7 @@ html
 		link(rel = 'stylesheet', href = '/_vendor/css/bootstrap-portlets.min.css')
 		link(rel = 'stylesheet', href = '/_vendor/css/font-awesome.min.css')
 		link(rel = 'stylesheet', href = '/_vendor/css/toastr.min.css')
-		link(rel = 'stylesheet', href = '/_shared/css/defaults.css')
+		link(rel = 'stylesheet', href = '/_shared/css/global.css')
 		link(rel = 'stylesheet', href = '/_shared/css/navigation.css')
 		block head
 
