--- a/views/ip-aliases/edit.jade
+++ b/views/ip-aliases/edit.jade
@@ -13,7 +13,7 @@ block page-body
 	div.portlet
 		div.portlet-title
 			div.caption
-				span.caption-subject.text-uppercase= _.title
+				span.caption-subject.text-uppercase!= _.title
 
 		div.portlet-body
 
