--- a/views/ip-aliases/index.jade
+++ b/views/ip-aliases/index.jade
@@ -9,7 +9,7 @@ mixin device(d)
 		p.name
 			= d.hostname
 			br
-			span= d.ipAliases + ' IP aliases'
+			span= d.ipAliases + ' out-bound IP aliases'
 		p.buttons.btn-group
 			+form_buttonLink('Manage Aliases', 'edit', '/ip-aliases/edit/' + d._id, {
 				'class': 'btn-warning'
